[gd_scene load_steps=2 format=3 uid="uid://c08inc3nvav0f"]

[ext_resource type="Script" uid="uid://c0djr0l6leq8c" path="res://ui/pause_menu.gd" id="1_50142"]

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("root")]
process_mode = 3
layer = 2
script = ExtResource("1_50142")
root = NodePath("Control")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -68.0
offset_right = 35.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)

[node name="Resume" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Save" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Quit" type="Button" parent="Control/Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Control/Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Control/Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
